# ros_sim

./: .aderc  .gitignore  README.md  rossim_mapping_bringup.sh  rossim_mapping_bringup_farm.sh  rossim_mapping_shutdown.sh  rossim_nav_bringup.sh  rossim_nav_bringup_farm.sh  rossim_nav_shutdown.sh
src/ayuan_description/: CMakeLists.txt  package.xml
src/ayuan_description/conf/: ayuan_nav.rviz  ayuan_slam.rviz
src/ayuan_description/launch/: ayuan_nav.launch  ayuan_slam.launch
src/ayuan_description/urdf/: ayuan.urdf
src/ayuan_description/xacro/: camera_sensors.xacro  inertia.xacro  kinect_sensors.xacro  lidar_sensors.xacro  move.xacro  robot.xacro  robot_base.xacro  robot_camera.xacro  robot_lidar.xacro
src/ayuan_gazebo/: CMakeLists.txt  package.xml
src/ayuan_gazebo/launch/: ayuan.launch
src/ayuan_gazebo/map/: farm.yaml  home.pgm  home_1.pgm  home_1.yaml
src/ayuan_gazebo/models/farm/farm/: model.sdf
src/ayuan_gazebo/models/home/: model.sdf
src/ayuan_gazebo/worlds/: farm  farm1.world  home.world
src/ayuan_robot/: CMakeLists.txt  package.xml
src/ayuan_robot/launch/: ayuan_robot_nav.launch  ayuan_robot_nav_farm.launch  ayuan_robot_nav_map_acml.launch  ayuan_robot_nav_movebase.launch  ayuan_robot_nav_movebase_gdb.launch  ayuan_robot_nav_sim.launch  ayuan_robot_nav_sim_farm.launch  ayuan_robot_slam_sim.launch  ayuan_robot_slam_sim_farm.launch
src/ayuan_robot/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params .yaml
src/navigation/costmap_2d/: CMakeLists.txt
src/navigation/global_planner/: CMakeLists.txt
src/navigation/global_planner/include/global_planner/: planner_core.h
src/navigation/global_planner/include/global_planner/path_smoother/: osqp_smoother.h  path_smoother.h
src/navigation/global_planner/src/: astar.cpp  gradient_path.cpp  planner_core.cpp
src/navigation/global_planner/src/path_smoother/: osqp_smoother.cpp  path_smoother.cpp
src/navigation/map_server/: CMakeLists.txt
src/slam_gmapping/gmapping/launch/: ayuan_slam_gmapping.launch
src/teleop_robot/: CMakeLists.txt  package.xml  teleop_robot_key.py  teleop_twist_key.py
