<?xml version="1.0"?>
<package format="2">
    <name>ayuan_description</name>
    <version>0.0.0</version>
    <description>ayuan robot description</description>
    <maintainer email="admin@todo.todo">admin</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
</package>
